# bonfire-mobile-app

./: .env  .env.development  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  App.tsx  LICENSE  README.md  acct.prv  addr.prv  app.json  babel.config.js  deploy-notes.txt  global.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  root.prv  shim.js  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
escrow-contract/: bonfire-escrow.cabal  bonfire-readme.md  cabal.project
escrow-contract/access-tokens/: adminMinter.sh  bonfire-organizer-access-policy.script  mint-organizer1.draft  mint-organizer1.signed  organizerMinter.sh  tx.raw  tx.signed
escrow-contract/app/: datum-json.hs
escrow-contract/datums/: dispute-002.json  example-datum-2.json  example-datum-3.json  example-datum.json  example-dispute-datum-3.json  example-dispute-datum.json  james-mix-test-002.json  mix-james-test-001.json
escrow-contract/output/output/bonfire-testnet/: bonfire-escrow-000.addr  bonfire-escrow-000.plutus  example01.json  orgUnlock.raw  orgUnlock.signed  piotr-attendee.json  tx.raw  tx.signed
escrow-contract/plutus-scripts/: bonfire-dispute-000.addr  bonfire-dispute-v2.addr  bonfire-dispute-v2.plutus  bonfire-escrow-v2.addr  bonfire-escrow-v2.plutus
escrow-contract/plutus-scripts/v1/: bonfire-dispute-000.plutus  bonfire-escrow-000.addr  bonfire-escrow-000.plutus
escrow-contract/src/Escrow/: BonfireDatum.hs  BonfireDispute.hs  BonfireEscrowContractDraft.hs  Demu.hs  EscrowCompiler.hs  Types.hs
(+359 files in other folders)
